feat: For Tracking Test `apache-http-client` and `dns-lookup in jvm`